# CMakeLearning

./: CMakeLists.txt
.github/workflows/: linux-build.yml  windows-build.yml
Automation/: automation.py  build_sample_script.py
Automation/CMAKE/: CMakeHelpers.cmake
Source/FightClubGame/: CMakeLists.txt  main.cpp
Source/FightClubGame/Game/: Character.cpp  Character.h  Weapon.h
Source/FightClubGame/Tests/: main.cpp
Source/Game/: Character.h  Weapon.cpp
Source/Tests/: main.cpp
Source/Utils/: CMakeLists.txt  Math.cpp  Math.h
